@@ -1,8 +1,8 @@
 //-----------------------------------------------------------------------------
 //
 // ImageLib Sources
-// Copyright (C) 2000-2002 by Denton Woods
-// Last modified: 02/01/2002 <--Y2K Compliant! =]
+// Copyright (C) 2000-2008 by Denton Woods
+// Last modified: 12/14/2008
 //
 // Filename: src-IL/src/il_png.c
 //
@@ -635,10 +635,10 @@ ILboolean iSavePngInternal()
 	text[0].text = "Generated by the Developer's Image Library (DevIL)";
 	text[0].compression = PNG_TEXT_COMPRESSION_NONE;
 	text[1].key = "Author's name";
-	text[1].text = iGetString(IL_PNG_AUTHNAME_STRING);
+	text[1].text = (char*)iGetString(IL_PNG_AUTHNAME_STRING);  // Will not actually be modified!
 	text[1].compression = PNG_TEXT_COMPRESSION_NONE;
 	text[2].key = "Author's comments";
-	text[2].text = iGetString(IL_PNG_AUTHNAME_STRING);
+	text[2].text = (char*)iGetString(IL_PNG_AUTHNAME_STRING);  // Will not actually be modified!
 	text[2].compression = PNG_TEXT_COMPRESSION_NONE;
 	png_set_text(png_ptr, info_ptr, text, 3);
 
