@@ -1,8 +1,8 @@
 //-----------------------------------------------------------------------------
 //
 // ImageLib Sources
-// Copyright (C) 2000-2002 by Denton Woods
-// Last modified: 06/13/2002 <--Y2K Compliant! =]
+// Copyright (C) 2000-2008 by Denton Woods
+// Last modified: 12/14/2008
 //
 // Filename: src-IL/src/il_tiff.c
 //
@@ -936,7 +936,7 @@ ILboolean iSaveTiffInternal(ILconst_string Filename)
 	TIFF	*File;
 	char	Description[512];
 	ILimage *TempImage;
-	char	*str;
+	const char	*str;
 	ILboolean SwapColors;
 	ILubyte *OldData;
 
